--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,30 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e1ca63d3",
+   "execution_count": null,
+   "id": "8050c02a",
    "metadata": {},
    "outputs": [],
    "source": [
-    " # Dependencies and Setup\n",
+    "# Dependencies and Setup\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import requests\n",
-    "import gmaps\n",
-    "import os\n",
+    "import time\n",
+    "from scipy.stats import linregress\n",
     "\n",
     "# Import API key\n",
-    "from api_keys import g_key"
+    "from api_keys import weather_api_key\n",
+    "\n",
+    "# Incorporated citipy to determine city based on latitude and longitude\n",
+    "from citipy import citipy\n",
+    "\n",
+    "# Output File (CSV)\n",
+    "output_data_file = \"output_data/cities.csv\"\n",
+    "\n",
+    "# Range of latitudes and longitudes\n",
+    "lat_range = (-90, 90)\n",
+    "lng_range = (-180, 180)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c291c63d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
