--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e1ca63d3",
    "metadata": {},
    "outputs": [],
@@ -21,8 +21,267 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c291c63d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cities_path = \"output_data/cities.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fd99b673",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cities_df = pd.read_csv(cities_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "039128cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Temp</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Min Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Geraldton</td>\n",
+       "      <td>-28.7667</td>\n",
+       "      <td>114.6000</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.23</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1634968588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cherskiy</td>\n",
+       "      <td>68.7500</td>\n",
+       "      <td>161.3000</td>\n",
+       "      <td>-7.0</td>\n",
+       "      <td>-7.0</td>\n",
+       "      <td>-7.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>99</td>\n",
+       "      <td>1.44</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1634968614</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tuatapere</td>\n",
+       "      <td>-46.1333</td>\n",
+       "      <td>167.6833</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>69</td>\n",
+       "      <td>98</td>\n",
+       "      <td>1.48</td>\n",
+       "      <td>NZ</td>\n",
+       "      <td>1634968615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sitka</td>\n",
+       "      <td>57.0531</td>\n",
+       "      <td>-135.3300</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>91</td>\n",
+       "      <td>100</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1634968615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sobolevo</td>\n",
+       "      <td>54.4299</td>\n",
+       "      <td>31.8996</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>79</td>\n",
+       "      <td>94</td>\n",
+       "      <td>7.08</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1634968615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>556</th>\n",
+       "      <td>Olinda</td>\n",
+       "      <td>-8.0089</td>\n",
+       "      <td>-34.8553</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>78</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2.06</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>1634968970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>557</th>\n",
+       "      <td>Yining</td>\n",
+       "      <td>29.0361</td>\n",
+       "      <td>114.5636</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>48</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>CN</td>\n",
+       "      <td>1634969231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>558</th>\n",
+       "      <td>Kamskiye Polyany</td>\n",
+       "      <td>55.4307</td>\n",
+       "      <td>51.4171</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>79</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7.34</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1634969231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>559</th>\n",
+       "      <td>Rosário do Sul</td>\n",
+       "      <td>-30.2583</td>\n",
+       "      <td>-54.9142</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>85</td>\n",
+       "      <td>44</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>1634969232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>560</th>\n",
+       "      <td>Kāzerūn</td>\n",
+       "      <td>29.6195</td>\n",
+       "      <td>51.6541</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>IR</td>\n",
+       "      <td>1634969232</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>561 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 City      Lat       Lng  Temp  Max Temp  Min Temp  Humidity  \\\n",
+       "0           Geraldton -28.7667  114.6000  81.0      81.0      74.0        32   \n",
+       "1            Cherskiy  68.7500  161.3000  -7.0      -7.0      -7.0       100   \n",
+       "2           Tuatapere -46.1333  167.6833  60.0      60.0      60.0        69   \n",
+       "3               Sitka  57.0531 -135.3300  44.0      44.0      44.0        91   \n",
+       "4            Sobolevo  54.4299   31.8996  42.0      42.0      42.0        79   \n",
+       "..                ...      ...       ...   ...       ...       ...       ...   \n",
+       "556            Olinda  -8.0089  -34.8553  80.0      80.0      80.0        78   \n",
+       "557            Yining  29.0361  114.5636  68.0      68.0      68.0        48   \n",
+       "558  Kamskiye Polyany  55.4307   51.4171  47.0      47.0      47.0        79   \n",
+       "559    Rosário do Sul -30.2583  -54.9142  58.0      58.0      58.0        85   \n",
+       "560           Kāzerūn  29.6195   51.6541  78.0      78.0      78.0        18   \n",
+       "\n",
+       "     Cloudiness  Wind Speed Country        Date  \n",
+       "0             0        8.23      AU  1634968588  \n",
+       "1            99        1.44      RU  1634968614  \n",
+       "2            98        1.48      NZ  1634968615  \n",
+       "3           100        3.14      US  1634968615  \n",
+       "4            94        7.08      RU  1634968615  \n",
+       "..          ...         ...     ...         ...  \n",
+       "556          20        2.06      BR  1634968970  \n",
+       "557          18        0.95      CN  1634969231  \n",
+       "558           4        7.34      RU  1634969231  \n",
+       "559          44        3.10      BR  1634969232  \n",
+       "560           0        1.03      IR  1634969232  \n",
+       "\n",
+       "[561 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cities_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c86de4ee",
    "metadata": {},
    "outputs": [],
    "source": []
